add statisticOfTeam api
